--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -40,13 +40,21 @@
 }
 
 .shown {
-  max-height: 100px;
+  overflow: hidden;
+  max-height: 500px;
   transition: max-height 0.5s ease-in;
 }
 
 .hidden {
+  overflow: hidden;
   max-height: 0;
   transition: max-height 0.5s ease-out;
+}
+
+.Navbar nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Navbar nav ul {
@@ -62,6 +70,29 @@
 
 .Navbar nav ul li a{
   text-decoration: none;
+}
+
+#Navbar-bio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 90%;
+}
+
+#Navbar-bio #Navbar-bio-description {
+  color: white;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  font-size: 0.875rem;
+}
+
+#Navbar-social-list{
+  display: flex;
+  flex-direction: row;
+}
+
+#Navbar-social-list li.Navbar-social-item:not(:last-child) { 
+  margin-right: 10px;  
 }
 
 
