--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,4 +1,8 @@
 
+a {
+  text-decoration: none;
+}
+
 .Navbar {
   width: 100%;
 }
@@ -41,7 +45,7 @@
 
 .shown {
   overflow: hidden;
-  max-height: 500px;
+  max-height: 3000px;
   transition: max-height 0.5s ease-in;
 }
 
@@ -68,10 +72,6 @@
   list-style: none;
 }
 
-.Navbar nav ul li a{
-  text-decoration: none;
-}
-
 #Navbar-bio {
   display: flex;
   flex-direction: column;
@@ -88,7 +88,7 @@
 #Navbar-social-list{
   display: flex;
   flex-direction: row;
-  margin: 0.5rem 0;
+  margin: 0.75rem 0;
 }
 
 #Navbar-social-list li.Navbar-social-item:not(:last-child) { 
@@ -99,7 +99,7 @@ hr {
   height: 1px;
   width: 80%;
   border-top: 0;
-  margin: 0.5rem 0;
+  margin: 0.75rem 0;
   opacity: 35%;
 }
 
@@ -130,12 +130,41 @@ hr {
 }
 
 .Navbar-nav-item:hover h3 {
-  color: grey;
+  color: rgba(0,0,0,0.8);
+}
+
+.Navbar-nav-item:hover .nav-link-icon {
+  color: rgba(0,0,0,0.8);
 }
 
 #Navbar-nav-links li.Navbar-nav-item:not(:last-child) {
   margin-bottom: 1rem;
 }
+
+#hire-me-button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  height: 40px;
+  width: 100%;
+  background: rgba(0,0,0,0.8);
+  margin: 0.75rem 0;
+}
+
+#hire-me-container {
+  display: flex;
+  flex-direction: row;
+  height: 40%;
+}
+
+#hire-me-container h3{
+  color: white;
+}
+
+#hire-me-button div {
+  height: 100%;
+}
+
 
 
 
