--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,53 @@
   display: flex;
   flex-direction: column;
 }
+
+.App main .Header {
+  transition: all 0.2s ease-in-out;
+}
+
+.App main.dark-mode .Header{
+  transition: all 0.2s ease-in-out;
+  background-color: rgb(30, 42, 58);
+}
+
+.App main.dark-mode #Navbar-button {
+  background: rgb(30, 42, 58);
+}
+
+.App main.dark-mode #Navbar-social-list li{
+  background-color: #54B689;
+}
+
+.App main.dark-mode #Navbar-social-list li .Navbar-social-icon {
+  color: white;
+}
+
+.App main.dark-mode .Navbar-nav-item .nav-link-icon {
+  color: rgba(255,255,255,0.7);
+}
+
+.App main.dark-mode .Navbar-nav-item .nav-link {
+  color: rgba(255,255,255,0.7);
+}
+
+.App main.dark-mode .Navbar-nav-item:hover .nav-link-icon {
+  color: white;
+}
+
+.App main.dark-mode .Navbar-nav-item:hover .nav-link{
+  color: white;
+}
+
+.App main.dark-mode #hire-me-button {
+  background: #54B689;
+}
+
+.App main.dark-mode #dark-mode-toggle+#dark-mode-toggle-label {
+  border: 3px solid #54B689;
+}
+
+.App main.dark-mode #dark-mode-toggle+#dark-mode-toggle-label:after {
+  background: #54B689;
+}
+
